[tool.poetry]
name = "wagtail-5-1"
version = "4.1.6"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wagtail_5"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
